Fixes for column wrapping and breakpoints, icluding nav search icon

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -52,10 +52,6 @@
 #buttonforsearch{
    left: 430px;
 }
- 
-#third_column{
-   margin-top: 20px;
-}
 
 #secondary__navbar{
    right: 40px;
